--- a/hosgeldiniz.css
+++ b/hosgeldiniz.css
@@ -1,8 +1,8 @@
 body{
     background-color: black;
     font-family: 'Roboto', sans-serif;
-    background-image:url(resim/Hoş\ manzara\ kullanılcak.jpg);
     background-size: cover;
+    justify-content: center;
 }
 .contanier{
     display: flex;
@@ -14,7 +14,6 @@ body{
 }
 .yazi1{
     color: white; 
-    background-image:url(resim/Hoş\ manzara\ kullanılcak.jpg);
     background-size: cover;
     border-radius:50px;
     font-size: 100px;
@@ -28,13 +27,16 @@ body{
     color: white;
     font-size:70px;
     letter-spacing: 9px;
+    justify-content: center;
 }
 .yazi2 a{
     color: orange;
     text-decoration: none;
+    justify-content: center;
 }
 .yazi3{
     color: white;
+    justify-content: center;
     font-size: 40px;
     margin-top:10px;
     display: inline-block;
