son eklemeler ve düzeltmeler

--- a/hosgeldiniz.css
+++ b/hosgeldiniz.css
@@ -3,6 +3,8 @@ body{
     font-family: 'Roboto', sans-serif;
     background-size: cover;
     justify-content: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 .contanier{
     display: flex;
